--- a/index.html
+++ b/index.html
@@ -11,22 +11,22 @@
     <nav>
       <ul>
         <li><a href="index.html">Home</li>
-        <li class="inst"><a href="https://www.instagram.com/vladimir_lenin_19/"><img src="images/inst.svg" alt="isn"></a></li>
-        <li class="twit"><a href="https://mobile.twitter.com/AEHNH1"><img src="images/twit.svg" alt="twit"></a></li>
+        <li class="inst"><a href="https://www.instagram.com/vladimir_lenin_19/"><img src="inst.svg" alt="isn"></a></li>
+        <li class="twit"><a href="https://mobile.twitter.com/AEHNH1"><img src="twit.svg" alt="twit"></a></li>
       </ul>
     </nav>
   </head>
   <body>
       <h2>পরাধীন ভারতের বঙ্গ সন্তান</h2>
       <div class="images">
-        <img src="images/neel1.jpg" alt="neel1" width="38%" height="28.33%">
-        <img src="images/neel2.jpg" alt="neel2" width="38%" height="28.33%">
-        <div id="ghasa"><img src="/images/Ghassan.jpg" alt="ghassan" width="30%" height="27%" >
+        <img src="neel1.jpg" alt="neel1" width="38%" height="28.33%">
+        <img src="neel2.jpg" alt="neel2" width="38%" height="28.33%">
+        <div id="ghasa"><img src="Ghassan.jpg" alt="ghassan" width="30%" height="27%" >
         <p class="wow">"If A Prisoner Is Beaten, It Is An Arrogant Expression Of Fear."- GHASAN&nbsp;KANAFANI.</p>
         </div>
-        <img src="images/neel3.png" alt="neel3" width="33%" height="auto">
-        <img src="images/neel4.png" alt="neel4" width="33%" height="auto">
-        <img src="images/neel5.png" alt="neel5" width="33%" height="auto">
+        <img src="neel3.png" alt="neel3" width="33%" height="auto">
+        <img src="neel4.png" alt="neel4" width="33%" height="auto">
+        <img src="neel5.png" alt="neel5" width="33%" height="auto">
             </div>
   </body>
 </html>
