--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
         <img src="neel1.jpg" alt="neel1" width="38%" height="28.33%">
         <img src="neel2.jpg" alt="neel2" width="38%" height="28.33%">
         <div id="ghasa"><img src="Ghassan.jpg" alt="ghassan" width="30%" height="27%" >
-        <p class="wow">"If A Prisoner Is Beaten, It Is An Arrogant Expression Of Fear."- GHASAN&nbsp;KANAFANI.</p>
+        <p class="wow">"If A Prisoner Is Beaten, It Is An Arrogant Expression Of Fear."- GHASAN KANAFANI.</p>
         </div>
-        <img src="neel3.png" alt="neel3" width="33%" height="auto">
-        <img src="neel4.png" alt="neel4" width="33%" height="auto">
-        <img src="neel5.png" alt="neel5" width="33%" height="auto">
+        <img src="neel3.jpg" alt="neel3" width="33%" height="auto">
+        <img src="neel4.jpg" alt="neel4" width="33%" height="auto">
+        <img src="neel5.jpg" alt="neel5" width="33%" height="auto">
             </div>
   </body>
 </html>
